syntax = "proto3";
option go_package = "/proto";

import "google/protobuf/timestamp.proto";

service RideService {
    rpc register(RegisterRequest) returns (RegisterResponse);
    rpc login(LoginRequest) returns (LoginResponse);
    rpc logout(AuthRequest) returns (Empty);
    rpc addFunds(AddFundsRequest) returns (AddFundsResponse);
    rpc checkBalance(AuthRequest) returns (CheckBalanceResponse);
    rpc pickupBike(PickupBikeRequest) returns (Empty);
    rpc dropBike(AuthRequest) returns (Empty);
    rpc move(MoveRequest) returns(Empty);
    rpc infoClient(AuthRequest) returns (InfoClientResponse);
    rpc infoZones(AuthRequest) returns (InfoZonesResponse);
    rpc checkLogs(AuthRequest) returns (CheckLogsResponse);
}

message Empty {

}

message AuthRequest {
    string authToken = 1;
}

/* Register */

message RegisterRequest {
    string username = 1;
    string password = 2;
}

message RegisterResponse {
    string authToken = 1;
}

/* Login */

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    string authToken = 1;
}

/* Add Funds */

message AddFundsRequest {
    string authToken = 1;
    uint32 amount = 2;
}

message AddFundsResponse {
    uint32 balance = 1;
}

/* Check Balance */

message CheckBalanceResponse {
    uint32 balance = 1;
}

/* Pickup Bike */

message PickupBikeRequest {
    string authToken = 1;
    string zone = 2;
}

/* Move */

message MoveRequest {
    string authToken = 1;
    string zone = 2;
}

/* Info Client */

message InfoClientResponse {
    bool onBike = 1;
    string atZone = 2;
}

/* Info Zones */

message Zone {
    string name = 1;
    int32 bikes = 2;
    int32 capacity = 3;
}

message InfoZonesResponse {
    repeated Zone zones = 1;
}

/* Logs */

enum Action {
    MOVE = 0;
    PICKUP_BIKE = 1;
    DROP_BIKE = 2;
}

message Log {
    google.protobuf.Timestamp timestamp = 1;
    Action action = 2;

    // optionals depending on the context
    string fromZone = 3;
    string toZone = 4;
    string zone = 5;
}

message CheckLogsResponse {
    repeated Log logs = 1;
}